--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "jquery": "^3.3.1",
+    "mongoose": "^5.3.7",
     "morgan": "~1.9.0",
     "popper.js": "^1.14.4"
   }
