--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http-errors": "~1.6.2",
     "jquery": "^3.3.1",
     "morgan": "~1.9.0",
+    "nodemon": "^1.18.5",
     "popper.js": "^1.14.4"
   }
 }
