--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "connect-flash": "^0.1.1",
     "bootstrap": "^4.1.3",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
@@ -17,8 +17,9 @@
     "jquery": "^3.3.1",
     "mongoose": "^5.3.7",
     "morgan": "~1.9.0",
-    "passport": "^0.4.0",
     "nodemon": "^1.18.5",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "popper.js": "^1.14.4"
   }
 }
